[project]
name = "prml-eneco-oct-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff.lint]
extend-select = [
  "UP", # pyupgrade
  # "D", # pydocstyle
  "N", # PEP8 names
  "I", # isort
]

# ignore = [
#   "D100",
#   "D103"
# ]

[tool.ruff]
exclude = [
  ".git",
  ".pyenv",
  ",pytest_cache",
  ".pytype",
  ".ruff_cache",
  "notebooks",
  ".venv"
]

[project.optional-dependencies]
dev = [
    "dunk>=0.4.0a0",
    "jupyter>=1.1.1",
    "pre-commit>=4.0.0",
    "ruff>=0.6.9",
]
